--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,67 @@
         {% block stylesheets %}
         {% endblock %}
 
+        <style>
+            @keyframes fade-in {
+                from { opacity: 0; }
+            }
+
+            @keyframes fade-out {
+                to { opacity: 0; }
+            }
+
+            @keyframes slide-from-right {
+                from { transform: translateX(90px); }
+            }
+
+            @keyframes slide-to-left {
+                to { transform: translateX(-90px); }
+            }
+
+            .slide-it {
+                view-transition-name: slide-it;
+            }
+
+            ::view-transition-old(slide-it) {
+                animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
+                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
+            }
+            ::view-transition-new(slide-it) {
+                animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
+                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
+            }
+
+
+            .progress {
+                height: 20px;
+                margin-bottom: 20px;
+                overflow: hidden;
+                background-color: #f5f5f5;
+                border-radius: 4px;
+                box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
+            }
+            .progress-bar {
+                float: left;
+                width: 0%;
+                height: 100%;
+                font-size: 12px;
+                line-height: 20px;
+                color: #fff;
+                text-align: center;
+                background-color: #2563eb;
+                -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+                box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
+                -webkit-transition: width .6s ease;
+                -o-transition: width .6s ease;
+                transition: width .6s ease;
+            }
+        </style>
+
+        <script src="https://cdn.tailwindcss.com"></script>
         {% block javascripts %}
         {% endblock %}
     </head>
-    <body>
+    <body class="bg-gray-200">
         {% block body %}{% endblock %}
     </body>
 </html>
