--- a/templates/page/dashboard.html.twig
+++ b/templates/page/dashboard.html.twig
@@ -5,8 +5,13 @@
 {% endblock %}
 
 {% block body %}
-    <div>
-        Imagine I'm a fancy fuckin dashboard
-        <a href="{{ logout_path() }}">Log out</a>
+    <div class="mx-auto max-w-4xl text-center mt-24" id="container">
+        <h1 class="text-6xl md:text-8xl"><<span class="text-blue-600">/</span>> htm<span class="text-blue-600">x</span></h1>
+        <div class="mt-12 flex flex-col gap-8 max-w-xl mx-auto">
+            <div hx-trigger="done" hx-get="/fragment/switch" hx-swap="outerHTML transition:true" hx-target="#container">
+                <h3 role="status" id="pblabel" class="text-4xl mb-4">Loading</h3>
+                {{ include('progress/progress.html.twig', {progress: 0}) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
