feat: Non-functional mockup

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -63,7 +63,7 @@
             }
         </style>
 
-        <script src="https://cdn.tailwindcss.com"></script>
+        <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
         {% block javascripts %}
         {% endblock %}
     </head>
