--- a/templates/fragment/login.html.twig
+++ b/templates/fragment/login.html.twig
@@ -3,7 +3,7 @@
         <div>
             <label for="username" class="block text-3xl font-medium leading-6 text-gray-900">Username</label>
             <div class="mt-2">
-                <input id="username" name="username" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-2xl sm:leading-6" />
+                <input id="username" name="username" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-600 sm:text-2xl sm:leading-6 pl-2" />
             </div>
         </div>
 
