--- a/templates/fragment/feed.html.twig
+++ b/templates/fragment/feed.html.twig
@@ -5,7 +5,7 @@
 
 <div id="tab-content" role="tabpanel" class="tab-content">
     <div class="max-w-5xl bg-white rounded mx-auto p-2 flex flex-col justify-end h-[750px]">
-        <ul role="list" class="space-y-6 bg-white overflow-scroll" hx-get="/fragment/message" hx-trigger="every 2000ms" hx-target="this" hx-swap="beforeend scroll:bottom">
+        <ul role="list" class="space-y-6 bg-white overflow-scroll" hx-get="/feed" hx-trigger="every 2000ms" hx-target="this" hx-swap="beforeend scroll:bottom">
             <li class="relative flex gap-x-4">
                 <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
                     <div class="w-px bg-gray-200"></div>
