--- a/templates/fragment/message.html.twig
+++ b/templates/fragment/message.html.twig
@@ -1,11 +1,35 @@
-<li class="relative flex gap-x-4">
-    <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
-        <div class="w-px bg-gray-200"></div>
-    </div>
-    <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
-        <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
-    </div>
-    <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">Chelsea Hagon</span>
-        created the invoice.</p>
-    <time datetime="2023-01-23T10:32" class="flex-none py-0.5 text-xs leading-5 text-gray-500">7d ago</time>
-</li>
+{% for entry in entries %}
+    {% if entry.content is defined %}
+        <li class="relative flex gap-x-4">
+            <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
+                <div class="w-px bg-gray-200"></div>
+            </div>
+            <img
+                src="https://images.unsplash.com/photo-1550525811-e5869dd03032?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                alt="" class="relative mt-3 h-6 w-6 flex-none rounded-full bg-gray-50">
+            <div class="flex-auto rounded-md p-3 ring-1 ring-inset ring-gray-200">
+                <div class="flex justify-between gap-x-4">
+                    <div class="py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">{{ entry.username }}</span>
+                        commented
+                    </div>
+                    <time datetime="2023-01-23T15:56" class="flex-none py-0.5 text-xs leading-5 text-gray-500">3d ago
+                    </time>
+                </div>
+                <p class="text-sm leading-6 text-gray-500">{{ entry.content }}</p>
+            </div>
+        </li>
+    {% endif %}
+    {% if entry.type is defined %}
+        <li class="relative flex gap-x-4">
+            <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
+                <div class="w-px bg-gray-200"></div>
+            </div>
+            <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
+                <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
+            </div>
+            <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">{{ entry.username }}</span>
+                reacted with {{ entry.type.emoji() }}.</p>
+            <time datetime="2023-01-23T10:32" class="flex-none py-0.5 text-xs leading-5 text-gray-500">7d ago</time>
+        </li>
+    {% endif %}
+{% endfor %}
