--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -1,9 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block javascripts %}
-    <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
-{% endblock %}
-
 {% block body %}
     <div class="mx-auto max-w-4xl mt-24">
         <h1 class="text-6xl text-center md:text-8xl"><<span class="text-blue-600">/</span>> htm<span class="text-blue-600">x</span></h1>
@@ -12,7 +8,7 @@
             <a
                 href="{{ path('page_login') }}"
                 class="rounded-md bg-blue-600 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-                hx-get="fragment/login" hx-swap="outerHTML transition:true" hx-target="closest div" hx-push-url="{{ path('page_login') }}"
+                hx-get="{{ path('fragment_login') }}" hx-swap="outerHTML transition:true" hx-target="closest div" hx-push-url="{{ path('page_login') }}"
             >Start Demo</a>
         </div>
     </div>
