fix: Reposition moods to not break container

--- a/templates/fragment/moods.html.twig
+++ b/templates/fragment/moods.html.twig
@@ -1,4 +1,4 @@
-<ul class="absolute bottom-10 z-10 -ml-6 w-60 rounded-lg bg-white py-3 text-base shadow ring-1 ring-black ring-opacity-5 focus:outline-none sm:ml-auto sm:w-64 sm:text-sm"
+<ul class="absolute bottom-10 -right-3 z-10 -ml-6 w-60 rounded-lg bg-white py-3 text-base shadow ring-1 ring-black ring-opacity-5 focus:outline-none sm:ml-auto sm:w-64 sm:text-sm"
     id="moodlist"
     tabindex="-1" role="listbox" aria-labelledby="listbox-label"
     aria-activedescendant="listbox-option-5">
