--- a/templates/fragment/comment.html.twig
+++ b/templates/fragment/comment.html.twig
@@ -13,6 +13,7 @@
                 <div>
                     <label id="listbox-label" class="sr-only">Your mood</label>
                     <div class="relative">
+                        {{ include('fragment/closed-moods.html.twig') }}
                         <button type="button"
                                 class="relative -m-2.5 flex h-10 w-10 items-center justify-center rounded-full text-gray-400 hover:text-gray-500"
                                 aria-haspopup="listbox" aria-expanded="true" aria-labelledby="listbox-label"
@@ -32,7 +33,6 @@
                                           </span>
                                         </span>
                         </button>
-                        <ul id="moodlist" class="hidden"></ul>
                     </div>
                 </div>
             </div>
