--- a/templates/fragment/tabs.html.twig
+++ b/templates/fragment/tabs.html.twig
@@ -1,3 +1,9 @@
-<div id="tabs" hx-post="{{ path('feed_full') }}" hx-trigger="load delay:100ms" hx-target="#tabs" hx-swap="innerHTML" class="mx-auto max-w-5xl bg-white rounded m-1 pt-2 h-[770px]">
-
+<div
+    id="tabs"
+    class="mx-auto max-w-5xl bg-white rounded m-1 pt-2 h-[770px]"
+    hx-trigger="load delay:100ms"
+    hx-post="{{ path('feed_full') }}"
+    hx-target="#tabs"
+    hx-swap="innerHTML"
+>
 </div>
