--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,70 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}HTMX Demo{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
-
-        <style>
-            @keyframes fade-in {
-                from { opacity: 0; }
-            }
-
-            @keyframes fade-out {
-                to { opacity: 0; }
-            }
-
-            @keyframes slide-from-right {
-                from { transform: translateX(90px); }
-            }
-
-            @keyframes slide-to-left {
-                to { transform: translateX(-90px); }
-            }
-
-            .slide-it {
-                view-transition-name: slide-it;
-            }
-
-            ::view-transition-old(slide-it) {
-                animation: 180ms cubic-bezier(0.4, 0, 1, 1) both fade-out,
-                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-to-left;
-            }
-            ::view-transition-new(slide-it) {
-                animation: 420ms cubic-bezier(0, 0, 0.2, 1) 90ms both fade-in,
-                600ms cubic-bezier(0.4, 0, 0.2, 1) both slide-from-right;
-            }
-
-            .progress {
-                height: 20px;
-                margin-bottom: 20px;
-                overflow: hidden;
-                background-color: #f5f5f5;
-                border-radius: 4px;
-                box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
-            }
-            .progress-bar {
-                float: left;
-                width: 0%;
-                height: 100%;
-                font-size: 12px;
-                line-height: 20px;
-                color: #fff;
-                text-align: center;
-                background-color: #2563eb;
-                -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-                box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
-                -webkit-transition: width .6s ease;
-                -o-transition: width .6s ease;
-                transition: width .6s ease;
-            }
-        </style>
+        <title>HTMX Demo</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="https://chrisdbrown.co.uk/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://chrisdbrown.co.uk/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://chrisdbrown.co.uk/favicon-16x16.png">
 
         <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
         <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
-        {% block javascripts %}
-        {% endblock %}
     </head>
     <body class="bg-gray-200">
         {% block body %}{% endblock %}
