--- a/templates/fragment/feed.html.twig
+++ b/templates/fragment/feed.html.twig
@@ -1,11 +1,38 @@
 <div class="tab-list flex justify-around w-full" role="tablist">
-    <button hx-post="{{ path('feed_full') }}" hx-push-url="{{ path('page_feed') }}" hx-swap="transition:true" class="rounded-md bg-blue-500 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600" role="tab" aria-selected="true" aria-controls="tab-content" disabled>Feed</button>
-    <button hx-get="{{ path('fragment_settings') }}" hx-push-url="{{ path('page_settings') }}" hx-swap="transition:true" class="rounded-md bg-white px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50" role="tab" aria-selected="false" aria-controls="tab-content">Settings</button>
+    <button
+        class="rounded-md bg-blue-500 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+        role="tab"
+        aria-selected="true"
+        aria-controls="tab-content"
+        hx-post="{{ path('feed_full') }}"
+        hx-swap="transition:true"
+        hx-push-url="{{ path('page_feed') }}"
+        disabled
+    >Feed</button>
+    <button
+        class="rounded-md bg-white px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50"
+        role="tab"
+        aria-selected="false"
+        aria-controls="tab-content"
+        hx-get="{{ path('fragment_settings') }}"
+        hx-swap="transition:true"
+        hx-push-url="{{ path('page_settings') }}"
+    >Settings</button>
 </div>
 
-<div id="tab-content" role="tabpanel" class="tab-content">
+<div
+    id="tab-content"
+    role="tabpanel"
+    class="tab-content">
     <div class="max-w-5xl bg-white rounded mx-auto p-2 flex flex-col justify-end">
-        <ul role="list" class="space-y-6 bg-white overflow-scroll h-[550px] pr-6" hx-get="{{ path('feed_new') }}" hx-trigger="every 1000ms" hx-target="this" hx-swap="beforeend scroll:bottom">
+        <ul
+            role="list"
+            class="space-y-6 bg-white overflow-scroll h-[550px] pr-6"
+            hx-trigger="every 1000ms"
+            hx-get="{{ path('feed_new') }}"
+            hx-target="this"
+            hx-swap="beforeend scroll:bottom"
+        >
             <li class="relative flex gap-x-4">
                 <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
                     <div class="w-px bg-gray-200"></div>
@@ -13,8 +40,9 @@
                 <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
                     <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
                 </div>
-                <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">chrisdbrown</span>
-                    reacted with 🎉</p>
+                <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500">
+                    <span class="font-medium text-gray-900">chrisdbrown</span> reacted with 🎉
+                </p>
                 <time datetime="{{ app.user.getCreatedAt().format('Y-m-d H:i:s') }}" class="flex-none py-0.5 text-xs leading-5 text-gray-500">{{ app.user.getCreatedAt().format('H:i:s') }}</time>
             </li>
             {{ include('fragment/messages.html.twig') }}
