--- a/templates/fragment/messages.html.twig
+++ b/templates/fragment/messages.html.twig
@@ -7,8 +7,8 @@
             <div class="relative mt-3 ml-1 h-4 w-4 flex-none rounded-full bg-blue-600"></div>
             <div class="flex-auto rounded-md p-3 ring-1 ring-inset ring-gray-200">
                 <div class="flex justify-between gap-x-4">
-                    <div class="py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">{{ entry.username }}</span>
-                        commented
+                    <div class="py-0.5 text-xs leading-5 text-gray-500">
+                        <span class="font-medium text-gray-900">{{ entry.username }}</span> commented
                     </div>
                     <time datetime="{{ feedtime(entry.offset).format('Y-m-d H:i:s') }}" class="flex-none py-0.5 text-xs leading-5 text-gray-500">{{ feedtime(entry.offset).format('H:i:s') }}</time>
                 </div>
@@ -24,8 +24,9 @@
             <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
                 <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
             </div>
-            <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">{{ entry.username }}</span>
-                reacted with {{ entry.type.emoji() }}</p>
+            <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500">
+                <span class="font-medium text-gray-900">{{ entry.username }}</span> reacted with {{ entry.type.emoji() }}
+            </p>
             <time datetime="{{ feedtime(entry.offset).format('Y-m-d H:i:s') }}" class="flex-none py-0.5 text-xs leading-5 text-gray-500">{{ feedtime(entry.offset).format('H:i:s') }}</time>
         </li>
     {% endif %}
