--- a/templates/fragment/moods.html.twig
+++ b/templates/fragment/moods.html.twig
@@ -1,89 +1,123 @@
-<ul class="absolute bottom-10 -right-3 z-10 -ml-6 w-60 rounded-lg bg-white py-3 text-base shadow ring-1 ring-black ring-opacity-5 focus:outline-none sm:ml-auto sm:w-64 sm:text-sm"
+<ul
     id="moodlist"
-    tabindex="-1" role="listbox" aria-labelledby="listbox-label"
-    aria-activedescendant="listbox-option-5">
-    <li class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+    class="absolute bottom-10 -right-3 z-10 -ml-6 w-60 rounded-lg bg-white py-3 text-base shadow ring-1 ring-black ring-opacity-5 focus:outline-none sm:ml-auto sm:w-64 sm:text-sm"
+    tabindex="-1"
+    role="listbox"
+    aria-labelledby="listbox-label"
+>
+    <li
+        id="listbox-option-0"
+        class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+        role="option"
         hx-post="{{ path('feed_react', {react: 'fire'}) }}"
         hx-target="#moodlist"
         hx-swap="outerHTML"
-        id="listbox-option-0" role="option">
+    >
         <div class="flex items-center">
-            <div
-                class="flex h-8 w-8 items-center justify-center rounded-full bg-red-500">
-                <svg class="h-5 w-5 flex-shrink-0 text-white" viewBox="0 0 20 20"
-                     fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M13.5 4.938a7 7 0 11-9.006 1.737c.202-.257.59-.218.793.039.278.352.594.672.943.954.332.269.786-.049.773-.476a5.977 5.977 0 01.572-2.759 6.026 6.026 0 012.486-2.665c.247-.14.55-.016.677.238A6.967 6.967 0 0013.5 4.938zM14 12a4 4 0 01-4 4c-1.913 0-3.52-1.398-3.91-3.182-.093-.429.44-.643.814-.413a4.043 4.043 0 001.601.564c.303.038.531-.24.51-.544a5.975 5.975 0 011.315-4.192.447.447 0 01.431-.16A4.001 4.001 0 0114 12z"
-                          clip-rule="evenodd"/>
+            <div class="flex h-8 w-8 items-center justify-center rounded-full bg-red-500">
+                <svg
+                    class="h-5 w-5 flex-shrink-0 text-white"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                    aria-hidden="true"
+                >
+                    <path
+                        fill-rule="evenodd"
+                        d="M13.5 4.938a7 7 0 11-9.006 1.737c.202-.257.59-.218.793.039.278.352.594.672.943.954.332.269.786-.049.773-.476a5.977 5.977 0 01.572-2.759 6.026 6.026 0 012.486-2.665c.247-.14.55-.016.677.238A6.967 6.967 0 0013.5 4.938zM14 12a4 4 0 01-4 4c-1.913 0-3.52-1.398-3.91-3.182-.093-.429.44-.643.814-.413a4.043 4.043 0 001.601.564c.303.038.531-.24.51-.544a5.975 5.975 0 011.315-4.192.447.447 0 01.431-.16A4.001 4.001 0 0114 12z"
+                        clip-rule="evenodd"
+                    />
                 </svg>
             </div>
             <span class="ml-3 block truncate font-medium">Fire</span>
         </div>
     </li>
-    <li class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+    <li
+        id="listbox-option-1"
+        class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+        role="option"
         hx-post="{{ path('feed_react', {react: 'love'}) }}"
         hx-target="#moodlist"
         hx-swap="outerHTML"
-        id="listbox-option-1" role="option">
+    >
         <div class="flex items-center">
-            <div
-                class="flex h-8 w-8 items-center justify-center rounded-full bg-pink-400">
-                <svg class="h-5 w-5 flex-shrink-0 text-white" viewBox="0 0 20 20"
-                     fill="currentColor" aria-hidden="true">
-                    <path
-                        d="M9.653 16.915l-.005-.003-.019-.01a20.759 20.759 0 01-1.162-.682 22.045 22.045 0 01-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 018-2.828A4.5 4.5 0 0118 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 01-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 01-.69.001l-.002-.001z"/>
+            <div class="flex h-8 w-8 items-center justify-center rounded-full bg-pink-400">
+                <svg
+                    class="h-5 w-5 flex-shrink-0 text-white"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                    aria-hidden="true"
+                >
+                    <path d="M9.653 16.915l-.005-.003-.019-.01a20.759 20.759 0 01-1.162-.682 22.045 22.045 0 01-2.582-1.9C4.045 12.733 2 10.352 2 7.5a4.5 4.5 0 018-2.828A4.5 4.5 0 0118 7.5c0 2.852-2.044 5.233-3.885 6.82a22.049 22.049 0 01-3.744 2.582l-.019.01-.005.003h-.002a.739.739 0 01-.69.001l-.002-.001z" />
                 </svg>
             </div>
             <span class="ml-3 block truncate font-medium">Love</span>
         </div>
     </li>
-    <li class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+    <li
+        id="listbox-option-2"
+        class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+        role="option"
         hx-post="{{ path('feed_react', {react: 'smile'}) }}"
         hx-target="#moodlist"
         hx-swap="outerHTML"
-        id="listbox-option-2" role="option">
+    >
         <div class="flex items-center">
-            <div
-                class="flex h-8 w-8 items-center justify-center rounded-full bg-green-400">
-                <svg class="h-5 w-5 flex-shrink-0 text-white" viewBox="0 0 20 20"
-                     fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd"
-                          d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.536-4.464a.75.75 0 10-1.061-1.061 3.5 3.5 0 01-4.95 0 .75.75 0 00-1.06 1.06 5 5 0 007.07 0zM9 8.5c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S7.448 7 8 7s1 .672 1 1.5zm3 1.5c.552 0 1-.672 1-1.5S12.552 7 12 7s-1 .672-1 1.5.448 1.5 1 1.5z"
-                          clip-rule="evenodd"/>
+            <div class="flex h-8 w-8 items-center justify-center rounded-full bg-green-400">
+                <svg
+                    class="h-5 w-5 flex-shrink-0 text-white"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                    aria-hidden="true"
+                >
+                    <path
+                        fill-rule="evenodd"
+                        d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.536-4.464a.75.75 0 10-1.061-1.061 3.5 3.5 0 01-4.95 0 .75.75 0 00-1.06 1.06 5 5 0 007.07 0zM9 8.5c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S7.448 7 8 7s1 .672 1 1.5zm3 1.5c.552 0 1-.672 1-1.5S12.552 7 12 7s-1 .672-1 1.5.448 1.5 1 1.5z"
+                        clip-rule="evenodd"
+                    />
                 </svg>
             </div>
             <span class="ml-3 block truncate font-medium">Smile</span>
         </div>
     </li>
-    <li class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+    <li
+        id="listbox-option-3"
+        class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+        role="option"
         hx-post="{{ path('feed_react', {react: 'thumbs'}) }}"
         hx-target="#moodlist"
         hx-swap="outerHTML"
-        id="listbox-option-4" role="option">
+    >
         <div class="flex items-center">
-            <div
-                class="flex h-8 w-8 items-center justify-center rounded-full bg-blue-500">
-                <svg class="h-5 w-5 flex-shrink-0 text-white" viewBox="0 0 20 20"
-                     fill="currentColor" aria-hidden="true">
-                    <path
-                        d="M1 8.25a1.25 1.25 0 112.5 0v7.5a1.25 1.25 0 11-2.5 0v-7.5zM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0114 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 01-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 01-1.341-.317l-2.734-1.366A3 3 0 006.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 012.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388z"/>
+            <div class="flex h-8 w-8 items-center justify-center rounded-full bg-blue-500">
+                <svg
+                    class="h-5 w-5 flex-shrink-0 text-white"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                    aria-hidden="true"
+                >
+                    <path d="M1 8.25a1.25 1.25 0 112.5 0v7.5a1.25 1.25 0 11-2.5 0v-7.5zM11 3V1.7c0-.268.14-.526.395-.607A2 2 0 0114 3c0 .995-.182 1.948-.514 2.826-.204.54.166 1.174.744 1.174h2.52c1.243 0 2.261 1.01 2.146 2.247a23.864 23.864 0 01-1.341 5.974C17.153 16.323 16.072 17 14.9 17h-3.192a3 3 0 01-1.341-.317l-2.734-1.366A3 3 0 006.292 15H5V8h.963c.685 0 1.258-.483 1.612-1.068a4.011 4.011 0 012.166-1.73c.432-.143.853-.386 1.011-.814.16-.432.248-.9.248-1.388z" />
                 </svg>
             </div>
             <span class="ml-3 block truncate font-medium">Thumbs up</span>
         </div>
     </li>
-    <li class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+    <li
+        id="listbox-option-4"
+        class="relative cursor-default select-none bg-white px-3 py-2 hover:bg-gray-100 cursor-pointer"
+        role="option"
         hx-post="{{ path('feed_react') }}"
         hx-target="#moodlist"
         hx-swap="outerHTML"
-        id="listbox-option-5" role="option">
+    >
         <div class="flex items-center">
-            <div
-                class="flex h-8 w-8 items-center justify-center rounded-full bg-transparent">
-                <svg class="h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20"
-                     fill="currentColor" aria-hidden="true">
-                    <path
-                        d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z"/>
+            <div class="flex h-8 w-8 items-center justify-center rounded-full bg-transparent">
+                <svg
+                    class="h-5 w-5 flex-shrink-0 text-gray-400"
+                    viewBox="0 0 20 20"
+                    fill="currentColor"
+                    aria-hidden="true"
+                >
+                    <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
                 </svg>
             </div>
             <span class="ml-3 block truncate font-medium">Close</span>
