--- a/templates/fragment/settings.html.twig
+++ b/templates/fragment/settings.html.twig
@@ -1,9 +1,30 @@
 <div class="tab-list flex justify-around w-full" role="tablist">
-    <button hx-post="{{ path('feed_full') }}" hx-push-url="{{ path('page_feed') }}" hx-swap="transition:true" class="rounded-md bg-blue-600 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600" role="tab" aria-selected="true" aria-controls="tab-content">Feed</button>
-    <button hx-get="{{ path('fragment_settings') }}" hx-push-url="{{ path('page_settings') }}" hx-swap="transition:true" class="rounded-md bg-gray-50 px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300" role="tab" aria-selected="false" aria-controls="tab-content" disabled>Settings</button>
+    <button
+        class="rounded-md bg-blue-600 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+        role="tab"
+        aria-selected="true"
+        aria-controls="tab-content"
+        hx-post="{{ path('feed_full') }}"
+        hx-push-url="{{ path('page_feed') }}"
+        hx-swap="transition:true"
+    >Feed</button>
+    <button
+        class="rounded-md bg-gray-50 px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300"
+        role="tab"
+        aria-selected="false"
+        aria-controls="tab-content"
+        hx-get="{{ path('fragment_settings') }}"
+        hx-push-url="{{ path('page_settings') }}"
+        hx-swap="transition:true"
+        disabled
+    >Settings</button>
 </div>
 
-<div id="tab-content" role="tabpanel" class="tab-content text-center pt-32">
+<div
+    id="tab-content"
+    class="tab-content text-center pt-32"
+    role="tabpanel"
+>
     <p class="text-3xl mb-8">Hello, {{ app.user.username }}.</p>
     <a href="{{ logout_path() }}" class="rounded-md bg-blue-600 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Sign Out</a>
 </div>
