--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -2,13 +2,16 @@
 
 {% block body %}
     <div class="mx-auto max-w-4xl mt-24">
-        <h1 class="text-6xl text-center md:text-8xl"><<span class="text-blue-600">/</span>> htm<span class="text-blue-600">x</span></h1>
+        {{ include('fragment/logo.html.twig') }}
         <div class="mt-12 flex flex-col gap-8 max-w-xs mx-auto text-center">
             <a href="https://chrisdbrown.co.uk/php-2023" class="rounded-md bg-white px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">View Slides</a>
             <a
                 href="{{ path('page_login') }}"
                 class="rounded-md bg-blue-600 px-3.5 py-2.5 text-3xl font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-                hx-get="{{ path('fragment_login') }}" hx-swap="outerHTML transition:true" hx-target="closest div" hx-push-url="{{ path('page_login') }}"
+                hx-get="{{ path('fragment_login') }}"
+                hx-swap="outerHTML transition:true"
+                hx-target="closest div"
+                hx-push-url="{{ path('page_login') }}"
             >Start Demo</a>
         </div>
     </div>
