--- a/templates/page/settings.html.twig
+++ b/templates/page/settings.html.twig
@@ -1,7 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div id="tabs" hx-get="{{ path('fragment_settings') }}" hx-trigger="load delay:100ms" hx-target="#tabs" hx-swap="innerHTML" class="mx-auto max-w-5xl bg-white rounded m-1 pt-2 h-[770px]">
-
+    <div
+        id="tabs"
+        class="mx-auto max-w-5xl bg-white rounded m-1 pt-2 h-[770px]"
+        hx-trigger="load delay:100ms"
+        hx-get="{{ path('fragment_settings') }}"
+        hx-target="#tabs"
+        hx-swap="innerHTML"
+    >
     </div>
 {% endblock %}
