feat: Update slides link

--- a/templates/page/home.html.twig
+++ b/templates/page/home.html.twig
@@ -12,7 +12,7 @@
                 hx-target="closest div"
                 hx-push-url="{{ path('page_login') }}"
             >Start Demo</a>
-            <a href="https://chrisdbrown.co.uk/php-2023" class="rounded-md bg-white px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">View Slides</a>
+            <a href="https://docs.google.com/presentation/d/1s2VARds0z0ukoP4NSZZe6WP7cWc_z20Ybgcbq8xvABg/edit?usp=sharing" class="rounded-md bg-white px-3.5 py-2.5 text-3xl font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">View Slides</a>
         </div>
     </div>
 {% endblock %}
